--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Este es un sitio web con Github Pages</h1>
     <p>Esto fue creado para el curso de Git y Github de Platzi</p>
-    <p><iframe src="https://giphy.com/embed/N4WObbpHW3VD6gwZUW" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/SearchlightPics-harlem-questlove-cultural-festival-N4WObbpHW3VD6gwZUW">via GIPHY</a></p></p>
+    <p><iframe src="https://giphy.com/embed/N4WObbpHW3VD6gwZUW" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/SearchlightPics-harlem-questlove-cultural-festival-N4WObbpHW3VD6gwZUW"></a></p></p>
 
 </body>
 </html>
